--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,7 +2,7 @@
 $background-principal: linear-gradient(rgba(204, 204, 204, 0.6), rgba(204, 204, 204, 0.6)),url(../IMAGES/Background.svg); 
 $background-tittles: linear-gradient(45deg, #330808, 
 rgb(233, 86, 7, 0.7));
-$color-principal: rgb(233, 86, 7 , 0.7);
+$color-principal: rgb(233, 86, 7);
 $color-text-white: rgb(250, 250, 250);
 $color-text-black: rgb(8, 8, 8);
 $color-footer-background:rgb(39, 39, 39 , 0.8);
