--- a/CSS/main.css
+++ b/CSS/main.css
@@ -328,11 +328,12 @@ body {
 .service-conteiner h3 {
   text-align: center;
   font-style: italic;
+  font-size: 30px;
   color: rgb(250, 250, 250);
   text-shadow: 1px 1px rgb(233, 86, 7);
 }
 .service-conteiner p {
-  font-size: 16px;
+  font-size: 20px;
   line-height: 35px;
   font-weight: bold;
 }
@@ -369,6 +370,9 @@ body {
   padding: 20px;
   place-items: center;
   grid-area: service2;
+}
+.service-2 li {
+  font-size: 20px;
 }
 
 .service-3 {
