--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -28,11 +28,12 @@
     h3{
         text-align: center;
         font-style: italic;
+        font-size: 30px;
         color: $color-text-white;
         text-shadow: 1px 1px  $color-principal;
     }
     p{
-        font-size: 16px;
+        font-size: 20px;
         line-height: 35px;
         font-weight: bold;
     }
@@ -66,6 +67,9 @@
     margin: 25px;
     padding: 20px;
     place-items: center;
+    li {
+        font-size: 20px
+    }
     grid-area: service2;
 }
   
