--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -35,7 +35,7 @@
     p{
         font-size: 20px;
         line-height: 35px;
-        font-weight: bold;
+        font-weight: $text-weight-regular;
     }
 }
 .tittle-service {
