--- a/CSS/main.css
+++ b/CSS/main.css
@@ -335,7 +335,7 @@ body {
 .service-conteiner p {
   font-size: 20px;
   line-height: 35px;
-  font-weight: bold;
+  font-weight: 400;
 }
 
 .tittle-service {
