--- a/scss/_nav-and-footer.scss
+++ b/scss/_nav-and-footer.scss
@@ -17,7 +17,7 @@
     li{
         a{
             text-decoration: none;
-            color: $color-principal;
+            color: $color-text-white;
             margin: 10px;
             letter-spacing: 1px;
             font-size: 18px;
