--- a/scss/_sobre-serco.scss
+++ b/scss/_sobre-serco.scss
@@ -10,7 +10,7 @@
         padding: 10px 0 10px 10px;
         font-size: 20px;
         line-height: 35px;
-        font-weight: bold;
+        font-weight: $text-weight-bold;
     }
     img {
         width: 200px;
@@ -30,7 +30,7 @@
         padding: 10px 10px 10px 10px;
         font-size: 20px;
         line-height: 35px;
-        font-weight: bold;
+        font-weight: $text-weight-bold;
         text-align: center;
     }
 }
