--- a/CSS/main.css
+++ b/CSS/main.css
@@ -193,16 +193,17 @@ body {
   justify-content: center;
   width: 100%;
   overflow: hidden;
-  padding: 20px;
+  padding: 20px 10px;
   background: linear-gradient(rgba(75, 71, 71, 0.8), rgba(75, 71, 71, 0.2)), url(../IMAGES/article-01.jpeg);
   background-position: center;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   background-size: cover;
   background-position: center;
+  border-radius: 13px;
 }
 .main-container div h2 {
-  font-size: 50px;
+  font-size: 35px;
   display: flex;
   justify-content: center;
   color: rgb(250, 250, 250);
@@ -221,7 +222,7 @@ body {
 .main-text-description {
   color: #ffffff;
   margin-top: 15px;
-  font-size: 50px;
+  font-size: 25px;
   text-align: center;
   background-image: linear-gradient(90deg, rgba(39, 39, 39, 0.8), rgba(233, 86, 7, 0.85));
 }
@@ -235,7 +236,7 @@ body {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
 }
 .main-reco img {
-  width: 50%;
+  width: 90%;
   height: auto;
   margin: 5px;
 }
@@ -285,9 +286,6 @@ body {
 }
 
 @media (width < 750px) {
-  .gif-serco {
-    width: 100%;
-  }
   .title {
     text-align: center;
     padding: 15px;
@@ -301,7 +299,7 @@ body {
     margin: 10px;
   }
   .main-container h2 {
-    font-size: 30px;
+    font-size: 25px;
     display: flex;
     justify-content: center;
     margin: 5px;
@@ -326,12 +324,8 @@ body {
     background-color: rgba(74, 74, 74, 0.5);
     color: rgb(250, 250, 250);
     padding: 15px;
-    font-size: 35px;
+    font-size: 25px;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-  }
-  .main-reco img {
-    width: 100%;
-    height: auto;
   }
 }
 .service-conteiner {
@@ -346,9 +340,9 @@ body {
   grid-area: tittle;
 }
 .service-conteiner h2 {
-  color: rgb(8, 8, 8);
+  color: rgb(233, 86, 7);
   text-align: center;
-  text-shadow: 1px 1px 0 0 10px rgba(0, 0, 0, 0.8);
+  text-shadow: 1px 1px rgb(250, 250, 250);
   font-size: 40px;
   letter-spacing: 2px;
   font-weight: bold;
@@ -363,6 +357,16 @@ body {
 .service-conteiner p {
   font-size: 20px;
   line-height: 35px;
+  font-weight: bold;
+  padding-left: 20px;
+}
+.service-conteiner img {
+  display: flex;
+  border-radius: 13px;
+  align-items: center;
+  justify-content: center;
+}
+.service-conteiner ul {
   font-weight: bold;
 }
 
@@ -449,23 +453,39 @@ body {
 }
 
 @media (width < 800px) {
-  .service-conteiner h1 {
-    font-size: 30px;
+  .service-conteiner .service-1 {
+    flex-direction: column-reverse;
+  }
+  .service-conteiner .service-2 {
+    flex-direction: column-reverse;
+  }
+  .service-conteiner .service-3 {
+    flex-direction: column-reverse;
+  }
+  .service-conteiner .service-4 {
+    flex-direction: column-reverse;
+  }
+  .service-conteiner .service-5 {
+    flex-direction: column-reverse;
   }
 }
 @media (width < 600px) {
   .service-conteiner h1 {
-    font-size: 25px;
     margin-top: 96.34px;
   }
   .service-conteiner h2 {
-    font-size: 20px;
+    font-size: 30px;
+    margin-top: 20px;
   }
   .service-conteiner h3 {
-    font-size: 20px;
+    font-size: 25px;
   }
   .service-conteiner p {
-    font-size: 15px;
+    font-size: 18px;
+  }
+  .service-conteiner ul li {
+    font-size: 18px;
+    padding: 5px;
   }
   .service-conteiner .service-1 {
     flex-direction: column-reverse;
@@ -481,6 +501,29 @@ body {
   }
   .service-conteiner .service-5 {
     flex-direction: column-reverse;
+  }
+}
+@media (width < 400px) {
+  .service-conteiner h1 {
+    margin-top: 96.34px;
+    font-size: 40px;
+  }
+  .service-conteiner h2 {
+    font-size: 25px;
+  }
+  .service-conteiner h3 {
+    font-size: 20px;
+  }
+  .service-conteiner p {
+    font-size: 13px;
+  }
+  .service-conteiner ul li {
+    font-size: 13px;
+    padding: 5px;
+  }
+  .service-conteiner img {
+    width: 150px;
+    height: 150px;
   }
 }
 .history-serco {
@@ -506,6 +549,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
+  border-radius: 13px;
 }
 .container-serco-carousel-aside aside {
   width: 50%;
