--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -20,16 +20,17 @@
     justify-content: center;
     width: 100%;
     overflow: hidden;
-    padding: 20px;
+    padding: 20px 10px;
     background: linear-gradient(rgba(75, 71, 71, 0.8), rgba(75, 71, 71, 0.2)),url(../IMAGES/article-01.jpeg);
     background-position: center;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     background-size:cover;
     background-position: center;
+    border-radius: 13px;
     div{
         h2{
-            font-size: 50px;
+            font-size: 35px;
             display: flex;
             justify-content: center;
             color: $color-text-white;
@@ -50,7 +51,7 @@
 .main-text-description{
     color: #ffffff;
     margin-top: 15px;
-    font-size: 50px;
+    font-size: 25px;
     text-align: center;
     background-image: $background-tittles;
 }
@@ -64,7 +65,7 @@
         text-shadow: $text-shadow-black;
     }
     img{
-        width: 50%; 
+        width: 90%; 
         height: auto;
         margin: 5px;
     }
@@ -122,9 +123,6 @@
 
 //RESPONSIVE
 @media (width <750px) {
-    .gif-serco {
-        width: 100%;
-    } 
     .title{
         text-align: center;
         padding: 15px;
@@ -137,7 +135,7 @@
     .main-container{
         margin: 10px;
         h2{
-            font-size: 30px;
+            font-size: 25px;
             display: flex;
             justify-content: center;
             margin: 5px;
@@ -149,7 +147,6 @@
             margin: 10px;
         }
     }
-
     .main-btn a{
         justify-content: space-evenly;
         margin: 20px 10px 0 10px;
@@ -165,12 +162,8 @@
             background-color: rgba(74, 74, 74, 0.5); 
             color: $color-text-white;
             padding: 15px;
-            font-size: 35px;
+            font-size: 25px;
             text-shadow: $text-shadow-black;
-        }
-        img{
-            width: 100%; 
-            height: auto;
         }
     }
 }
