--- a/scss/_sobre-serco.scss
+++ b/scss/_sobre-serco.scss
@@ -24,6 +24,7 @@
         width:  100%;
         height: 100%;
         overflow: hidden;
+        border-radius: $border-radious;
     }
     aside {
         width: 50%;
