--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -64,11 +64,13 @@
         font-size: 35px;
         text-shadow: $text-shadow-black;
     }
-    img{
-        width: 90%; 
-        height: auto;
-        margin: 5px;
+    .img-opinion {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 15px;
     }
+
 }
  //button 
 
@@ -164,6 +166,9 @@
             padding: 15px;
             font-size: 25px;
             text-shadow: $text-shadow-black;
+        }
+        img{
+            width: 100%;
         }
     }
 }
