--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -4,6 +4,8 @@
 } 
 .title{
     text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px; 
     background-color: rgba(74, 74, 74, 0.5); 
     color: $color-text-white;
     padding: 15px;
@@ -13,6 +15,7 @@
         display: block;
         margin: 10px 0 0 15px;
     }
+    @include efectup(0px,50px,0px,0px); 
 }
 .main-container{
     display: flex;
@@ -41,8 +44,8 @@
             font-size: 20px;
             display: flex;
             justify-content: center;
-            color: $color-text-black;
-            text-shadow: 0 0 8px rgba(155, 150, 150, 0.8);
+            color: $color-principal;
+            text-shadow: 0 0 8px $color-text-black;
             margin: 10%
         }
     }
@@ -53,7 +56,7 @@
     margin-top: 15px;
     font-size: 25px;
     text-align: center;
-    background-image: $background-tittles;
+    background-image: $background-nav;
 }
 .main-reco{
     h2{
@@ -63,6 +66,7 @@
         padding: 15px;
         font-size: 35px;
         text-shadow: $text-shadow-black;
+        @include efectup(0px,50px,0px,0px);
     }
     .img-opinion {
         display: flex;
@@ -133,6 +137,7 @@
             display: block;
             margin: 10px 0 0 15px;
         }
+        padding-bottom: 50px;
     }
     .main-container{
         margin: 10px;
@@ -166,6 +171,7 @@
             padding: 15px;
             font-size: 25px;
             text-shadow: $text-shadow-black;
+            padding-bottom: 50px;
         }
         img{
             width: 100%;
