--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -4,7 +4,10 @@
     background-image: $background-tittles;
     text-align: center;
     font-size: 60px;
+    padding-bottom: 10px;
     color: $color-text-white;
+    clip-path: polygon(0 0,100% 0,100% calc(100% - 50px),50% 100%,0 calc(100% - 50px));
+    padding-bottom: 35px;
 }
 .p-general {
     padding: 10px 0 10px 10px;
@@ -32,17 +35,26 @@
         color: $color-text-white;
     }
 }
-//mixins
-@mixin backgroundgral ($flex,$just,$place) {
-    display: flex;
-    flex-direction: $flex;
-    justify-content: $just;
-    place-items: $place;
-    background-color: rgb(39, 39, 39, 0.3);
+.efect-service{
+    background-color: rgba(39, 39, 39, 0.3);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     box-shadow: 1px 1px 20px black;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-evenly;
     border-radius: 13px;
     margin: 25px;
     padding: 20px;
+    place-items: center;
+}
+
+//mixins
+@mixin efectup ($top,$bottom,$left,$right)
+{
+    clip-path: polygon(0 0,100% 0,100% calc(100% - 50px),50% 100%,0 calc(100% - 50px));
+    padding-top: $top;
+    padding-bottom: $bottom;
+    padding-left: $left;
+    padding-right: $right;
 }
