--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -52,31 +52,12 @@
     grid-area: description;
 } 
 .service-1 {
-    background-color: rgba(39, 39, 39, 0.3);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    box-shadow: 1px 1px 20px black;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    border-radius: 13px;
-    margin: 25px;
-    padding: 20px;
-    place-items: center;
-    grid-area: service1;
+    @extend .efect-service;
+    grid-area: service1; 
 }
 .service-2 {
-    background-color: rgb(39, 39, 39, 0.3);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    box-shadow: 1px 1px 20px black;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    border-radius: 13px;
-    margin: 25px;
-    padding: 20px;
-    place-items: center;
+    @extend .efect-service;
+    flex-direction: row;
     li {
         font-size: 20px
     }
@@ -84,48 +65,19 @@
 }
   
 .service-3 {
-    background-color: rgb(39, 39, 39, 0.3);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    box-shadow: 1px 1px 20px black;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    border-radius: 13px;
-    margin: 25px;
-    padding: 20px;
-    place-items: center;
+    @extend .efect-service;
     grid-area: service3;
 }
   
 .service-4 {
-    background-color: rgb(39, 39, 39, 0.3);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    box-shadow: 1px 1px 20px black;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    border-radius: 13px;
-    margin: 25px;
-    padding: 20px;
-    place-items: center;
+    @extend .efect-service;
+    flex-direction: row;
     grid-area: service4;
 
 }
   
 .service-5 {
-    background-color: rgb(39, 39, 39, 0.3);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    box-shadow: 1px 1px 20px black;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-evenly;
-    border-radius: 13px;
-    margin: 25px;
-    padding: 20px;
-    place-items: center;
+    @extend .efect-service;
     grid-area: service5; 
 
 }
@@ -190,7 +142,8 @@
         .service-conteiner{
             h1 {
                 margin-top: 96.34px;
-                font-size: 40px;
+                font-size: 25px;
+                padding-bottom: 30px;
             } 
             h2{
                     font-size: 25px;
