--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,7 +1,7 @@
 //variables 
 $background-principal: linear-gradient(rgba(204, 204, 204, 0.6), rgba(204, 204, 204, 0.6)),url(../IMAGES/Background.svg); 
-$background-tittles: linear-gradient(90deg, rgb(39, 39, 39 ,  0.8 ), 
-rgb(233, 86, 7 , 0.85));
+$background-tittles: linear-gradient(180deg, rgb(39, 39, 39 ,  0.8 ), rgb(233, 86, 7 , 0.85));
+$background-nav : linear-gradient(180deg,rgb(233, 86, 7 , 0.85), rgb(39, 39, 39 ,  0.8 ));
 $color-principal: rgb(233, 86, 7);
 $color-text-white: rgb(250, 250, 250);
 $color-text-black: rgb(8, 8, 8);
