--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,7 +13,7 @@ body {
 
 .tittle-general, .error-404-container h1, .contact-form-main h1, .sucursales h1, .container-serco h1, .service-conteiner h1 {
   margin-top: 96.34px;
-  background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.8), rgba(233, 86, 7, 0.85));
+  background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.95), rgba(233, 86, 7, 0.85));
   text-align: center;
   font-size: 60px;
   padding-bottom: 10px;
@@ -31,7 +31,7 @@ body {
 
 .btn-general, .btn-404-gral .btn-404 {
   padding: 15px 30px;
-  background-color: rgba(39, 39, 39, 0.8);
+  background-color: rgba(39, 39, 39, 0.93);
   border: none;
   text-decoration: none;
   margin: auto;
@@ -45,7 +45,7 @@ body {
   text-align: center;
 }
 .btn-general:hover, .btn-404-gral .btn-404:hover {
-  background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.8), rgba(233, 86, 7, 0.85));
+  background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.95), rgba(233, 86, 7, 0.85));
   box-shadow: 0 0 10px rgb(246, 246, 246), 0 0 20px rgb(219, 136, 47), 0 0 50px rgb(246, 164, 31);
   color: rgb(250, 250, 250);
 }
@@ -68,9 +68,13 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(39, 39, 39, 0.8);
+  background-color: rgba(39, 39, 39, 0.93);
   width: 100%;
   z-index: 99;
+}
+
+.navbar-toggler {
+  color: rgb(233, 86, 7);
 }
 
 .nav-logo {
@@ -78,6 +82,10 @@ body {
 }
 .nav-logo img {
   width: 120px;
+}
+.nav-logo img:hover {
+  transform: scale(1.15);
+  letter-spacing: 0.5px;
 }
 
 .nav-menu {
@@ -104,7 +112,7 @@ body {
   -webkit-backdrop-filter: blur(5px);
 }
 .nav-menu .dropdown-custom li a {
-  color: rgba(39, 39, 39, 0.8);
+  color: rgba(39, 39, 39, 0.93);
   letter-spacing: 1.5px;
   font-weight: bold;
   max-width: auto;
@@ -112,6 +120,8 @@ body {
 }
 .nav-menu .dropdown-custom li a:hover {
   background-color: rgb(250, 250, 250);
+  color: rgb(233, 86, 7);
+  transform: scale(1.15);
 }
 
 .foot-container {
@@ -121,7 +131,7 @@ body {
   justify-content: space-around;
   flex-direction: column-reverse;
   flex-wrap: wrap;
-  background-color: rgba(39, 39, 39, 0.8);
+  background-color: rgba(39, 39, 39, 0.93);
   padding: 0;
   clip-path: polygon(0 0, 50% 50px, 100% 0, 100% 100%, 0 100%);
   padding-top: 35px;
@@ -130,7 +140,7 @@ body {
 .foot-menu ul {
   display: flex;
   justify-content: center;
-  font-weight: rgba(39, 39, 39, 0.8);
+  font-weight: rgba(39, 39, 39, 0.93);
   align-items: center;
   margin: 10px 10px 10px 10px;
 }
@@ -188,24 +198,20 @@ body {
   }
 }
 .gif-serco {
-  margin-top: 96.34px;
   width: 100%;
 }
 
 .title {
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   background-color: rgba(74, 74, 74, 0.5);
   color: rgb(250, 250, 250);
   padding: 15px;
   font-size: 35px;
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-  clip-path: polygon(0 0, 100% 0, 100% calc(100% - 50px), 50% 100%, 0 calc(100% - 50px));
-  padding-top: 0px;
-  padding-bottom: 50px;
-  padding-left: 0px;
-  padding-right: 0px;
+  clip-path: polygon(0 50px, 50% 0, 100% 50px, 100% 100%, 0 100%);
+  padding-top: 40px;
 }
 .title span {
   display: block;
@@ -249,7 +255,7 @@ body {
   margin-top: 15px;
   font-size: 25px;
   text-align: center;
-  background-image: linear-gradient(180deg, rgba(233, 86, 7, 0.85), rgba(39, 39, 39, 0.8));
+  background-image: linear-gradient(180deg, rgba(233, 86, 7, 0.85), rgba(39, 39, 39, 0.95));
 }
 
 .main-reco h2 {
@@ -317,11 +323,15 @@ body {
 }
 
 @media (width < 750px) {
+  .gif-serco {
+    margin-top: 96.34px;
+    width: 100%;
+  }
   .title {
     text-align: center;
     padding: 15px;
     font-size: 20px;
-    padding-bottom: 50px;
+    padding-top: 50px;
   }
   .title span {
     display: block;
@@ -663,7 +673,7 @@ body {
 
 .btn-ubic {
   padding: 15px 30px;
-  background-color: rgba(39, 39, 39, 0.8);
+  background-color: rgba(39, 39, 39, 0.93);
   border: none;
   text-decoration: none;
   margin: auto;
@@ -677,7 +687,7 @@ body {
   text-align: center;
 }
 .btn-ubic:hover {
-  background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.8), rgba(233, 86, 7, 0.85));
+  background-image: linear-gradient(180deg, rgba(39, 39, 39, 0.95), rgba(233, 86, 7, 0.85));
   box-shadow: 0 0 10px rgb(246, 246, 246), 0 0 20px rgb(219, 136, 47), 0 0 50px rgb(246, 164, 31);
   color: rgb(250, 250, 250);
 }
