--- a/CSS/main.css
+++ b/CSS/main.css
@@ -54,7 +54,7 @@ body {
   background-color: rgba(39, 39, 39, 0.3);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-  box-shadow: 1px 1px 20px black;
+  box-shadow: 1px 1px 20px rgb(8, 8, 8);
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-evenly;
@@ -62,6 +62,29 @@ body {
   margin: 25px;
   padding: 20px;
   place-items: center;
+}
+
+.background-tittle-secundary {
+  padding: 45px;
+  position: relative;
+  --mask:
+      radial-gradient(35px at 35px 35px,#0000 calc(98% - 5px),#000 calc(100% - 5px) 98%,#0000) -35px -35px,
+      linear-gradient(90deg,#000 10px,#0000 0) -5px 50% /100% calc(100% - 70px + 5px) repeat-x,
+      linear-gradient( #000 10px,#0000 0) 50% -5px/calc(100% - 70px + 5px) 100% repeat-y;
+}
+.background-tittle-secundary:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgb(233, 86, 7);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+.background-description {
+  --mask: radial-gradient(20px at 20px 20px,#0000 98%,#000) -20px -20px;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
 }
 
 .nav-container {
@@ -203,19 +226,29 @@ body {
 
 .title {
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  background-color: rgba(74, 74, 74, 0.5);
-  color: rgb(250, 250, 250);
-  padding: 15px;
-  font-size: 35px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-  clip-path: polygon(0 50px, 50% 0, 100% 50px, 100% 100%, 0 100%);
-  padding-top: 40px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  color: rgb(8, 8, 8);
+  font-size: 40px;
+  font-weight: bold;
+  padding: 55px;
+  position: relative;
+  --mask:
+      radial-gradient(35px at 35px 35px,#0000 calc(98% - 5px),#000 calc(100% - 5px) 98%,#0000) -35px -35px,
+      linear-gradient(90deg,#000 10px,#0000 0) -5px 50% /100% calc(100% - 70px + 5px) repeat-x,
+      linear-gradient( #000 10px,#0000 0) 50% -5px/calc(100% - 70px + 5px) 100% repeat-y;
 }
 .title span {
   display: block;
   margin: 10px 0 0 15px;
+}
+.title:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgb(233, 86, 7);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
 }
 
 .main-container {
@@ -251,16 +284,33 @@ body {
 }
 
 .main-text-description {
-  color: #ffffff;
-  margin-top: 15px;
-  font-size: 25px;
+  color: rgba(39, 39, 39, 0.93);
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: bold;
   text-align: center;
-  background-image: linear-gradient(180deg, rgba(233, 86, 7, 0.85), rgba(39, 39, 39, 0.95));
+  padding: 15px;
+  position: relative;
+  --mask:
+      radial-gradient(35px at 35px 35px,#0000 calc(98% - 5px),#000 calc(100% - 5px) 98%,#0000) -35px -35px,
+      linear-gradient(90deg,#000 10px,#0000 0) -5px 50% /100% calc(100% - 70px + 5px) repeat-x,
+      linear-gradient( #000 10px,#0000 0) 50% -5px/calc(100% - 70px + 5px) 100% repeat-y;
+}
+.main-text-description:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgb(233, 86, 7);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
 }
 
 .main-reco h2 {
   text-align: start;
-  background-color: rgba(74, 74, 74, 0.5);
+  background-color: rgba(39, 39, 39, 0.3);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   color: rgb(250, 250, 250);
   padding: 15px;
   font-size: 35px;
@@ -270,6 +320,8 @@ body {
   padding-bottom: 50px;
   padding-left: 0px;
   padding-right: 0px;
+  padding-left: 20px;
+  box-shadow: 10px 10px 20px black;
 }
 .main-reco .img-opinion {
   display: flex;
@@ -329,9 +381,8 @@ body {
   }
   .title {
     text-align: center;
-    padding: 15px;
-    font-size: 20px;
-    padding-top: 50px;
+    padding: 25px;
+    font-size: 25px;
   }
   .title span {
     display: block;
@@ -358,7 +409,8 @@ body {
     font-size: 15px;
   }
   .main-text-description {
-    margin-top: 15px;
+    margin-top: 10px;
+    padding: 20px;
     font-size: 25px;
   }
   .main-reco h2 {
@@ -384,6 +436,22 @@ body {
 
 .service-conteiner h1 {
   grid-area: tittle;
+}
+.service-conteiner .tittle-service {
+  padding: 15px;
+  position: relative;
+  --mask:
+      radial-gradient(35px at 35px 35px,#0000 calc(98% - 5px),#000 calc(100% - 5px) 98%,#0000) -35px -35px,
+      linear-gradient(90deg,#000 10px,#0000 0) -5px 50% /100% calc(100% - 70px + 5px) repeat-x,
+      linear-gradient( #000 10px,#0000 0) 50% -5px/calc(100% - 70px + 5px) 100% repeat-y;
+}
+.service-conteiner .tittle-service:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgb(233, 86, 7);
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
 }
 .service-conteiner h2 {
   color: rgb(233, 86, 7);
