--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,19 +3,16 @@
 } 
 .title{
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px; 
-    background-color: rgba(74, 74, 74, 0.5); 
-    color: $color-text-white;
-    padding: 15px;
-    font-size: 35px;
-    text-shadow: $text-shadow-black;
+    margin-top: 30px;
+    margin-bottom: 30px;  
+    color: $color-text-black;
+    font-size: 40px;
+    font-weight: $text-weight-bold;
     span{
         display: block;
         margin: 10px 0 0 15px;
     }
-    clip-path: polygon(0 50px,50% 0,100% 50px,100% 100%,0 100%);
-    padding-top: 40px;
+    @include background-tittle-secundary(55px);
 }
 .main-container{
     display: flex;
@@ -52,21 +49,27 @@
 }
 
 .main-text-description{
-    color: #ffffff;
-    margin-top: 15px;
-    font-size: 25px;
+    color: $color-footer-background;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: $text-weight-bold;
     text-align: center;
-    background-image: $background-nav;
+    @include background-tittle-secundary(15px);
 }
 .main-reco{
     h2{
         text-align: start;
-        background-color: rgba(74, 74, 74, 0.5); 
+        background-color: rgba(39, 39, 39, 0.3);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
         color: $color-text-white;
         padding: 15px;
         font-size: 35px;
         text-shadow: $text-shadow-black;
         @include efectup(0px,50px,0px,0px);
+        padding-left: 20px;
+        box-shadow: 10px 10px 20px black;
     }
     .img-opinion {
         display: flex;
@@ -135,13 +138,12 @@
     } 
     .title{
         text-align: center;
-        padding: 15px;
-        font-size: 20px;
+        padding: 25px;
+        font-size: 25px;
         span{
             display: block;
             margin: 10px 0 0 15px;
         }
-        padding-top: 50px;
     }
     .main-container{
         margin: 10px;
@@ -164,7 +166,8 @@
         font-size: 15px;
     } 
     .main-text-description{
-        margin-top: 15px;
+        margin-top: 10px;
+        padding: 20px;
         font-size: 25px;
     }
     .main-reco{
