--- a/CSS/main.css
+++ b/CSS/main.css
@@ -864,16 +864,19 @@ body {
   overflow: hidden;
   transition: all 0.2s;
   cursor: pointer;
+  text-decoration: none;
 }
 .contact-form-button:hover {
   border: 2px solid rgb(233, 86, 7);
   background: rgb(8, 8, 8);
   color: rgb(233, 86, 7);
+  text-decoration: none;
 }
 .contact-form-button:active {
   border: 2px solid rgba(102, 218, 67, 0);
   background: rgb(233, 86, 7);
   color: rgb(8, 8, 8);
+  text-decoration: none;
 }
 
 .contact-form-input {
