--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -123,6 +123,7 @@
     .service-conteiner { 
         h1 {
         margin-top: 96.34px;
+        font-size: 35px;
         } 
         h2{
             font-size: 30px;
