--- a/scss/_sobre-serco.scss
+++ b/scss/_sobre-serco.scss
@@ -4,7 +4,6 @@
     }
 }
 .history-serco{
-    display: flex;
     margin: 15px;
     p{
         padding: 10px 0 10px 10px;
@@ -15,6 +14,8 @@
     img {
         width: 200px;
         height: 200px;
+        float:right;
+        margin: 10px;
     }
     }
 .container-serco-carousel-aside {
@@ -45,16 +46,20 @@
         }
     }
     .history-serco{
+        p{
+            text-align: center;
+        }
         img{
             width: 150px;
             height: 150px;
+            margin: 10px;
         }
     }
     .container-serco-carousel-aside {
-        flex-direction: column-reverse;
+        flex-direction: column;
         aside{
             width: 100%;
-            margin-top: -45px;
+            margin-top: 30px;
         }
     }
 }
@@ -66,19 +71,12 @@
         }
     }
     .history-serco{
-        display: flex;
-        margin: 0%;
         p{
             margin-left: -5px;
-            font-size: 20px;
+            font-size: 15px;
             line-height: 35px;
             font-weight: bold;
-            width: 100%;
-        }
-        img {
-            margin-left: -15px;
-            width: 100px;
-            height: 100px;
+            text-align: center;
         }
     }
     .container-serco-carousel-aside {
@@ -92,8 +90,8 @@
         }
         aside {
             width: 100%;
-            padding-top: 30%;
-            font-size: 20px;
+            padding-top: 10px;
+            font-size: 15px;
             line-height: 35px;
             font-weight: bold;
             text-align: center;
